--- a/Sales_Analysis.ipynb
+++ b/Sales_Analysis.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "6b46b4b3-e586-4d43-bb28-b1bcfd11e57c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Sales Analysis"
    ]
@@ -11,16 +15,24 @@
   {
    "cell_type": "markdown",
    "id": "5ffa38a9-f8d9-4622-862e-4c6e4d951b0e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "### import dependecies"
+    "### Import dependecies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "94121f68-f62e-4468-ab68-272c50c2e6a6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -32,7 +44,11 @@
   {
    "cell_type": "markdown",
    "id": "fff3bdf4-6a5e-442b-9e49-635407b98de8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Marging 12 months of sales data into a single file "
    ]
@@ -41,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b97e9886-d6d7-4cbe-bb44-0b9b510dfdbf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "path = '/Users/kacperleczynski/Desktop/ProjectsML/Pandas/Pandas_Sales_Analysis/Sales_data/'\n",
@@ -60,7 +80,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "52654126-956c-4706-bc2b-5054a9760fe5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv('all_data.csv')"
@@ -70,7 +94,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "39e8cc1f-d249-4af9-b919-ef554516ea80",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -179,7 +207,11 @@
   {
    "cell_type": "markdown",
    "id": "9268c73c-685b-49ad-b9c8-e34465893e23",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Cleaning Data"
    ]
@@ -188,7 +220,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "3a5104f4-1caf-42de-82c5-d63a672f05e7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df.dropna(axis=0, how='all', inplace=True)"
@@ -197,7 +233,11 @@
   {
    "cell_type": "markdown",
    "id": "87043903-cdf8-421f-8e42-1d0bc06068df",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "##### Find 'or' and delete it"
    ]
@@ -206,7 +246,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "55874a78-bc4d-4269-9180-426c07c135e9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = df[df['Order Date'].str[:2] != 'Or']"
@@ -215,7 +259,11 @@
   {
    "cell_type": "markdown",
    "id": "a4626e76-7a62-40fd-afef-38a54d5eb0ce",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "##### Adding month column"
    ]
@@ -224,7 +272,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "777def6b-4aa0-4599-a24b-3cb56fca762b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df['Month'] = df['Order Date'].str[:2]\n",
@@ -234,7 +286,11 @@
   {
    "cell_type": "markdown",
    "id": "589cc8bb-e911-4dfe-bb3a-e1296dd16821",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Best month and How much was earned ?"
    ]
@@ -243,7 +299,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "eccf2fe2-bbf3-4148-b65c-666ada219bb3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -359,7 +419,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "83d6ae9f-55b7-4a41-8d4a-685b8a6b1729",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df['Price Each'] = df['Price Each'].astype('float32')\n",
@@ -370,7 +434,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "99e5950e-5821-4015-859c-d85a83a9f258",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df['Sales'] = df['Price Each'] * df['Quantity Ordered']"
@@ -380,7 +448,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "a5eabafa-1e1d-46ed-b911-6a2d2328a804",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -415,7 +487,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "5c8d591c-9037-460c-b6ee-452d4cd8a3c8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -442,7 +518,11 @@
   {
    "cell_type": "markdown",
    "id": "71c42040-669f-4508-8a73-adad7e0a6db8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### What city had the highest number of sales"
    ]
@@ -450,7 +530,11 @@
   {
    "cell_type": "markdown",
    "id": "cb357169-d2bb-480f-a16e-a67c3d4b4ae1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "##### Adding column with City on specific index"
    ]
@@ -459,7 +543,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "87381b98-d47a-40d2-b402-5f2e8439a024",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df.insert(5, 'City', 3)"
@@ -469,7 +557,11 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "6f75aa6a-d370-4cd1-9040-2e931297b9b4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "cities = [f\"{city.split(',')[1]} ({city.split(',')[2].split(' ')[1]})\" for city in df['Purchase Address']]\n",
@@ -480,7 +572,11 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "e53c4501-9661-4dbc-af90-5a840346763e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -619,7 +715,11 @@
   {
    "cell_type": "markdown",
    "id": "d0c3216e-df77-4518-9a60-2ed877b048c6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "##### visualizations on the chart"
    ]
@@ -628,7 +728,11 @@
    "cell_type": "code",
    "execution_count": 106,
    "id": "ed6b4b6b-0998-48c7-bc99-056287ad288c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -659,7 +763,11 @@
   {
    "cell_type": "markdown",
    "id": "b00ccaca-3125-4a41-9ebe-bb7c4743472f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### What time should we display advertisements to maximize likelihood of customer's buying product"
    ]
@@ -668,7 +776,11 @@
    "cell_type": "code",
    "execution_count": 107,
    "id": "bedff938-474b-44e5-92f6-8a89718a6f78",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df['Order Date'] = pd.to_datetime(df['Order Date'])"
@@ -678,7 +790,11 @@
    "cell_type": "code",
    "execution_count": 108,
    "id": "49a1a208-e726-4d1f-a7bb-936b2e82c226",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -813,7 +929,11 @@
    "cell_type": "code",
    "execution_count": 112,
    "id": "d4f67e21-e743-443a-9ff6-0e9e825244b5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -962,7 +1082,11 @@
    "cell_type": "code",
    "execution_count": 121,
    "id": "9ffb439c-7f2e-491f-b032-d2a2743ddb59",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -993,7 +1117,11 @@
   {
    "cell_type": "markdown",
    "id": "46508492-9129-4b11-a0c8-4f24be6a1729",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### What products are most often sold together"
    ]
@@ -1002,7 +1130,11 @@
    "cell_type": "code",
    "execution_count": 155,
    "id": "f30f3a4f-50af-4fa2-b83c-b17fa595c789",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1026,7 +1158,11 @@
   {
    "cell_type": "markdown",
    "id": "b23b9f54-9b09-4257-9b4e-fb1243817dbe",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "##### Using Counter and combinations tools "
    ]
@@ -1035,7 +1171,11 @@
    "cell_type": "code",
    "execution_count": 161,
    "id": "ca90949e-2b70-4068-8b77-cb08b7275296",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1071,7 +1211,11 @@
   {
    "cell_type": "markdown",
    "id": "a201f8fc-3ee8-4d49-9e5e-03d8cb598333",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### What product sold the most? "
    ]
@@ -1080,7 +1224,11 @@
    "cell_type": "code",
    "execution_count": 189,
    "id": "6d1ce1ab-84cc-4d16-b1e3-d57ddc4f1e37",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1110,7 +1258,11 @@
    "cell_type": "code",
    "execution_count": 195,
    "id": "9e350db2-080c-40cb-a046-6571e7b00929",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1152,7 +1304,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9680872f-0868-452f-ae4e-f2c819709020",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
